# lg

./: .gitignore  Automate.h  CMakeLists.txt  Makefile  lg.cbp  lg.depend  lg.layout  main.cpp  main.cpp~  ~$akeLists.txt
Tests/: lut  mktest.sh  results.csv
Tests/01.NoArgument/: stderr.out~
Tests/02.FichierInexistant/: stderr.out
Tests/03.FichierExistant/: std.out
Tests/04.Affichage/: std.out
Tests/05.DoubleDeclaration/: run  stderr.out
Tests/06.1.AnalyseStatique/: std.out  stderr.out
Tests/06.2.AnalyseStatique/: stderr.out
Tests/06.3.AnalyseStatique/: stderr.out
Tests/06.4.AnalyseStatique/: stderr.out
Tests/07.Execution/: std.out
Tests/08.1.Optimisation/: std.out
Tests/09.ErreurLexicale/: run  std.out  stderr.out
Tests/1-06.5.AnalyseStatique/: description
Tests/1-06.6 AnalyseStatique/: description  run  stderr.out~
Tests/1-06.6.AnalyseStatique/: run  stderr.out
Tests/1-06.7. AnalyseStatique/: description  run  stderr.out~
Tests/1-06.7.AnalyseStatique/: run  stderr.out
Tests/1-07.1.Execution/: description  run  std.out
Tests/1-07.2.Execution/: description  run  run~  std.out  std.out~
Tests/1-07.3.Execution/: description  run  run~  std.out
Tests/1-07.4.Execution/: description  run  std.in~  std.out  stderr.out
Tests/1-07.5.Execution/: description  run  stderr.out
Tests/1-09.2ErreurLexical/: description  description~  run  stderr.out
Tests/1-09.3ErreurLexical/: description  run
Tests/1-10.2.ErreurSyntaxique/: description  run  stderr.out~
Tests/1-10.3.ErreurSyntaxique/: description  run  stderr.out~
Tests/1-10.4 .ErreurSyntaxique/: description~  run  stderr.out~
Tests/1-11.FichierVide/: run
Tests/1-12.FauxArgument/: run  stderr.out
Tests/1-12.TestSyntaxique/: description  run  run~  stderr.out~
Tests/1-13.FauxArgument/: description  description~  run  stderr.out~
Tests/files/: avecDecimal.lt  avecNegatif.lt  avecNegatif.lt~  correct.lt  lexerror2.lt  lexerror2.lt~  lexerror3.lt  modifConst1.lt  modifConst2.lt  nondeclared.lt  operation.lt  operation.lt~  static1.lt  static4.lt  static4.lt~  static5.lt  static6.lt  synerror2.lt  synerror3.lt  synerror4.lt  synx.lt  varAff.lt
include/: Automate.h  Declaration.h  Declaration.h~  DeclarationConst.h  DeclarationVar.h  Etat.h  Lexer.h  Symbole.h  Symbole.h~  TableDeclarations.h  TableSymbole.h
res/: CMakeLists.txt  programme_char_faux.txt  programme_ok.txt  test_split.txt
src/: Automate.cpp  Declaration.cpp  DeclarationConst.cpp  DeclarationVar.cpp  Etat.cpp  Executeur.cpp~  Lexer.cpp  Symbole.cpp  Symbole.cpp~  TableDeclarations.cpp  TableSymbole.cpp  main.cpp
test/: CMakeLists.txt  MainTestSuite.cpp  MainTestSuite.h
